[package]
name = "rl2-modloader-db"
version = "2.2.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
libsql = "0.9.1"
serde = "1.0.219"
tokio = {version = "1.28.2", features = ["full"]}
tower-http = {version = "0.6.2", features = ["cors"]}

[profile.release]
strip = true
opt-level = "z"
lto = true
